Fixed mobile navigation buttons going off screen

--- a/docs/style.css
+++ b/docs/style.css
@@ -577,6 +577,12 @@ footer {
         flex-direction: column;
         gap: 10px;
     }
+
+    .nav nav {
+        display: flex;
+        gap: 25px;
+        overflow-x: auto;
+    }
 }
 
 @media (max-width: 768px) {
